# test-pypi-deploy2

./: LICENSE  README.md  pyproject.toml
.github/workflows/: draft-release.yml  pypi-release.yml
test_deploy/: test.py
